# n-levels-of-rag

./: .gitignore  README.md  embed.py  output-150.jsonl  output-250.jsonl  output-400.jsonl  output-50.jsonl  output.json  output.jsonl  pyproject.toml  requirements.txt  test.json  test.py
data/: a-project-of-ones-own.md  alien-truth.md  donate-unrestricted.md  heresy.md  how-people-get-rich.md  how-to-do-great-work.md  how-to-start-google.md  how-to-work-hard.md  is-there-such-a-thing-as-good-taste.md  superlinear-returns.md  weird-languages.md  what-i-learnt-from-users.md  what-i-worked-on.md
helpers/: db.py  models.py
rag_app/: README.md  cli.py  evaluate.py  generate.py  generate_synthetic_question.py  ingest.py  models.py  query.py
rag_app/src/: chunking.py  metrics.py
tests/: test_models.py
